style: updated stylesheet font

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,8 +1,32 @@
+@import url(https://fonts.googleapis.com/css?family=Audiowide);
+@import url(https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap);
+
 body {
     background-color: rgb(3, 169, 190);
     align-items: center;
+
+}
+
+h1 {
+    font-family: "Audiowide" !important;
 }
 
 header {
     font-size: 39;
+}
+
+.flex-container {
+    display: flex;
+    background-color: grey;
+    align-items: center;
+}
+
+.photos {
+    padding-top: 9px;
+    box-shadow: 10px 10px 10px rgb(190, 3, 149);
+}
+
+.information {
+    padding: 15px;
+    font-family: Roboto;
 }
