--- a/mystyle.css
+++ b/mystyle.css
@@ -17,8 +17,8 @@ header {
 
 .flex-container {
     display: flex;
-    background-color: grey;
-    align-items: center;
+    background-color: rgb(212, 207, 207);
+
 }
 
 .photos {
